mejora en el search de administracion de pacientes